# AI-SignRecognition

./: .gitignore  README.md  extract_data.py  main.py  pyproject.toml
src/: demo_gestures_rules.py  demo_landmarks.py  demo_realtime.py  demo_words_sentences.py  extract_asl_alphabet_landmarks.py  extract_hand_features.py  landmark_features.py  train_asl_multiclass.py  train_landmarks_mlp.py  utils_metrics.py
src/asl_har.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
