[project]
name = "asl-har"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.5",
    "mediapipe==0.10.21",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
